# gpu-run

./: .gitignore  AGENT.md  CHANGELOG.md  CMakeLists.txt  README.md  app.py  gpu_server.py  requirements.txt
cli/: client.cc  client.h  main.cc  tui.cc  tui.h
config/: images.allowlist
examples/cuda_smoke/: matmul_bench.cu  run.sh
gpu_manager/: gpu_manager.cc  gpu_manager.h  metrics.h
proto/: gpu_service.proto
scheduler/: job.h  scheduler.cc  scheduler.h
scripts/: windows_expose_wsl.ps1
server/: auth.cc  auth.h  main.cc  server.cc  server.h
tests/: e2e_smoke.sh  log_streamer_test.cc  scheduler_test.cc
tests/e2e_workload/: run.sh
worker/: log_streamer.h  worker.cc  worker.h
